--- a/app/views/layouts/erp/backend/_footer.html.erb
+++ b/app/views/layouts/erp/backend/_footer.html.erb
@@ -1,6 +1,6 @@
 <div class="page-footer">
     <div class="page-footer-inner">
-      2017 &copy; Orthor-K ERP System by <%= link_to "Global Naturesoft", "http://globalnaturesoft.com", target: "_blank" %>. All rights reserved.
+      2017 &copy; Orthor-K ERP System by <%= link_to "Nguyễn Ngọc Sơn - 1633645", "http://hcmut.edu.vn", target: "_blank" %>. All rights reserved.
     </div>
     <div class="scroll-to-top">
         <i class="icon-arrow-up"></i>
