--- a/app/views/layouts/erp/backend/login/_copyright.html.erb
+++ b/app/views/layouts/erp/backend/login/_copyright.html.erb
@@ -1,1 +1,1 @@
-<div class="copyright">2016 - 2018 &copy; ERP System by <%= link_to "Hoang Khang Incotech", "http://hoangkhang.com.vn", target: "_blank" %>. All rights reserved.</div>
+<div class="copyright">2016 - 2018 &copy; ERP System by <%= link_to "Nguyễn Ngọc Sơn", "http://hcmut.edu.vn", target: "_blank" %>. All rights reserved.</div>
